Implemented SIENA. Completely refactored the coded in order to do so.